--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   "dependencies": {
     "@tarojs/components": "2.0.0-beta.13",
     "@tarojs/components-qa": "2.0.0-beta.13",
+    "@tarojs/redux": "^2.0.1",
+    "@tarojs/redux-h5": "^2.0.1",
     "@tarojs/router": "2.0.0-beta.13",
     "@tarojs/taro": "2.0.0-beta.13",
     "@tarojs/taro-alipay": "2.0.0-beta.13",
@@ -41,11 +43,15 @@
     "@tarojs/taro-swan": "2.0.0-beta.13",
     "@tarojs/taro-tt": "2.0.0-beta.13",
     "@tarojs/taro-weapp": "2.0.0-beta.13",
+    "dva-core": "^2.0.2",
+    "dva-loading": "^3.0.20",
     "markdown-it": "^10.0.0",
     "marked": "^0.8.0",
     "nerv-devtools": "^1.5.5",
     "nervjs": "^1.5.5",
     "qs": "^6.9.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "taro-ui": "^2.2.4"
   },
   "devDependencies": {
