--- a/package.json
+++ b/package.json
@@ -1,86 +1,86 @@
 {
-  "name": "JavaNorthMiniApp",
-  "version": "1.0.0",
-  "private": true,
-  "description": "JavaNorth",
-  "templateInfo": {
-    "name": "default",
-    "typescript": true,
-    "css": "sass"
-  },
-  "scripts": {
-    "build:weapp": "taro build --type weapp",
-    "build:swan": "taro build --type swan",
-    "build:alipay": "taro build --type alipay",
-    "build:tt": "taro build --type tt",
-    "build:h5": "taro build --type h5",
-    "build:rn": "taro build --type rn",
-    "build:qq": "taro build --type qq",
-    "build:quickapp": "taro build --type quickapp",
-    "dev:weapp": "npm run build:weapp -- --watch",
-    "dev:swan": "npm run build:swan -- --watch",
-    "dev:alipay": "npm run build:alipay -- --watch",
-    "dev:tt": "npm run build:tt -- --watch",
-    "dev:h5": "npm run build:h5 -- --watch",
-    "dev:rn": "npm run build:rn -- --watch",
-    "dev:qq": "npm run build:qq -- --watch",
-    "dev:quickapp": "npm run build:quickapp -- --watch"
-  },
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "@tarojs/async-await": "^2.0.1",
-    "@tarojs/components": "2.0.1",
-    "@tarojs/components-qa": "2.0.1",
-    "@tarojs/redux": "^2.0.1",
-    "@tarojs/redux-h5": "^2.0.1",
-    "@tarojs/router": "2.0.1",
-    "@tarojs/taro": "2.0.1",
-    "@tarojs/taro-alipay": "2.0.1",
-    "@tarojs/taro-h5": "2.0.1",
-    "@tarojs/taro-qq": "2.0.1",
-    "@tarojs/taro-quickapp": "2.0.1",
-    "@tarojs/taro-rn": "2.0.1",
-    "@tarojs/taro-swan": "2.0.1",
-    "@tarojs/taro-tt": "2.0.1",
-    "@tarojs/taro-weapp": "2.0.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-runtime": "^6.26.0",
-    "dva-core": "^2.0.2",
-    "dva-loading": "^3.0.20",
-    "markdown-it": "^10.0.0",
-    "marked": "^0.8.0",
-    "nerv-devtools": "^1.5.6",
-    "nervjs": "^1.5.6",
-    "qs": "^6.9.1",
-    "redux": "^4.0.5",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "taro-ui": "^2.2.4",
-    "towxml": "^2.1.4"
-  },
-  "devDependencies": {
-    "@tarojs/mini-runner": "2.0.1",
-    "@tarojs/webpack-runner": "2.0.1",
-    "@types/react": "^16.9.17",
-    "@types/webpack-env": "^1.15.0",
-    "@typescript-eslint/eslint-plugin": "^2.16.0",
-    "@typescript-eslint/parser": "^2.16.0",
-    "babel-eslint": "^10.0.3",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "babel-plugin-transform-jsx-stylesheet": "^0.6.9",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "eslint": "^6.8.0",
-    "eslint-config-taro": "2.0.1",
-    "eslint-plugin-import": "^2.20.0",
-    "eslint-plugin-react": "^7.18.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "eslint-plugin-taro": "2.0.1",
-    "stylelint": "13.0.0",
-    "stylelint-config-taro-rn": "2.0.1",
-    "stylelint-taro-rn": "2.0.1",
-    "typescript": "^3.7.5"
-  }
+	"name": "JavaNorthMiniApp",
+	"version": "1.0.0",
+	"private": true,
+	"description": "JavaNorth",
+	"templateInfo": {
+		"name": "default",
+		"typescript": true,
+		"css": "sass"
+	},
+	"scripts": {
+		"build:weapp": "taro build --type weapp",
+		"build:swan": "taro build --type swan",
+		"build:alipay": "taro build --type alipay",
+		"build:tt": "taro build --type tt",
+		"build:h5": "taro build --type h5",
+		"build:rn": "taro build --type rn",
+		"build:qq": "taro build --type qq",
+		"build:quickapp": "taro build --type quickapp",
+		"dev:weapp": "npm run build:weapp -- --watch",
+		"dev:swan": "npm run build:swan -- --watch",
+		"dev:alipay": "npm run build:alipay -- --watch",
+		"dev:tt": "npm run build:tt -- --watch",
+		"dev:h5": "npm run build:h5 -- --watch",
+		"dev:rn": "npm run build:rn -- --watch",
+		"dev:qq": "npm run build:qq -- --watch",
+		"dev:quickapp": "npm run build:quickapp -- --watch"
+	},
+	"author": "",
+	"license": "MIT",
+	"dependencies": {
+		"@tarojs/async-await": "2.0.1",
+		"@tarojs/components": "2.0.1",
+		"@tarojs/components-qa": "2.0.1",
+		"@tarojs/redux": "2.0.1",
+		"@tarojs/redux-h5": "2.0.1",
+		"@tarojs/router": "2.0.1",
+		"@tarojs/taro": "2.0.1",
+		"@tarojs/taro-alipay": "2.0.1",
+		"@tarojs/taro-h5": "2.0.1",
+		"@tarojs/taro-qq": "2.0.1",
+		"@tarojs/taro-quickapp": "2.0.1",
+		"@tarojs/taro-rn": "2.0.1",
+		"@tarojs/taro-swan": "2.0.1",
+		"@tarojs/taro-tt": "2.0.1",
+		"@tarojs/taro-weapp": "2.0.1",
+		"babel-plugin-transform-runtime": "^6.23.0",
+		"babel-runtime": "^6.26.0",
+		"dva-core": "^2.0.2",
+		"dva-loading": "^3.0.20",
+		"markdown-it": "^10.0.0",
+		"marked": "^0.8.0",
+		"nerv-devtools": "^1.5.6",
+		"nervjs": "^1.5.6",
+		"qs": "^6.9.1",
+		"redux": "^4.0.5",
+		"redux-logger": "^3.0.6",
+		"redux-thunk": "^2.3.0",
+		"taro-ui": "^2.2.4",
+		"towxml": "^2.1.4"
+	},
+	"devDependencies": {
+		"@tarojs/mini-runner": "2.0.1",
+		"@tarojs/webpack-runner": "2.0.1",
+		"@types/react": "^16.9.17",
+		"@types/webpack-env": "^1.15.0",
+		"@typescript-eslint/eslint-plugin": "^2.16.0",
+		"@typescript-eslint/parser": "^2.16.0",
+		"babel-eslint": "^10.0.3",
+		"babel-plugin-transform-class-properties": "^6.24.1",
+		"babel-plugin-transform-decorators-legacy": "^1.3.5",
+		"babel-plugin-transform-jsx-stylesheet": "^0.6.9",
+		"babel-plugin-transform-object-rest-spread": "^6.26.0",
+		"babel-preset-env": "^1.7.0",
+		"eslint": "^6.8.0",
+		"eslint-config-taro": "2.0.1",
+		"eslint-plugin-import": "^2.20.0",
+		"eslint-plugin-react": "^7.18.0",
+		"eslint-plugin-react-hooks": "^2.3.0",
+		"eslint-plugin-taro": "2.0.1",
+		"stylelint": "13.0.0",
+		"stylelint-config-taro-rn": "2.0.1",
+		"stylelint-taro-rn": "2.0.1",
+		"typescript": "^3.7.5"
+	}
 }
