--- a/package.json
+++ b/package.json
@@ -48,16 +48,13 @@
 		"babel-runtime": "^6.26.0",
 		"dva-core": "^2.0.2",
 		"dva-loading": "^3.0.20",
-		"markdown-it": "^10.0.0",
-		"marked": "^0.8.0",
 		"nerv-devtools": "^1.5.6",
 		"nervjs": "^1.5.6",
 		"qs": "^6.9.1",
 		"redux": "^4.0.5",
 		"redux-logger": "^3.0.6",
 		"redux-thunk": "^2.3.0",
-		"taro-ui": "^2.2.4",
-		"towxml": "^2.1.4"
+		"taro-ui": "^2.2.4"
 	},
 	"devDependencies": {
 		"@tarojs/mini-runner": "2.0.1",
